[package]
name = "noist"
version = "0.1.0"
authors = ["Brock <brock@bits.app>"]
edition = "2021"

[dependencies]
hex = "0.4.3"
rand = "0.8.5"
secp = { version = "0.3.0", default-features = false, features = ["k256"] }
sha2 = { version = "0.10.8", default-features = false }

[lib]
name = "noist"
path = "src/lib.rs"